<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/activity_basic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoDetail" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/editPersonInfo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_border"
            android:contentDescription="@string/placeholder"
            android:onClick="editProfile"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/userInfoDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edit_icon" />

        <Button
            android:id="@+id/write_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="writeReview"
            android:text="@string/writeReview"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="fill"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userPicture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/placeholder"
            app:srcCompat="@drawable/shiki_face" />

        <LinearLayout
            android:id="@+id/userNameAndDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:gravity="fill"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/placeholder"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/selfIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/placeholder" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userInfoDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="top|start"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/fixEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emailToBeChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/fixPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phoneToBeChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/review_switch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_select"
                android:onClick="switchReview"
                android:text="@string/review_list"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/offer_switch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_notselect"
                android:onClick="switchOffer"
                android:text="@string/books_offered"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviewsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile_list"
            android:orientation="vertical"
            android:visibility="visible">

            <ListView
                android:id="@+id/reviewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/offerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/profile_list"
            android:visibility="visible">

            <ListView
                android:id="@+id/offerList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>