<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:gravity="fill_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ImageView
            android:id="@+id/edit_profile_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="4"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:clickable="true"
            android:contentDescription="@string/placeholder"
            android:focusable="true"
            android:padding="0dp"
            app:srcCompat="@drawable/login_user_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_border"
            android:gravity="fill"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:contentDescription="@string/placeholder"
                android:padding="13dp"
                app:srcCompat="@drawable/login_user_icon" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:drawableBottom="@drawable/round_border"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_border"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:contentDescription="@string/placeholder"
                android:padding="13dp"
                app:srcCompat="@drawable/shiki_face" />

            <EditText
                android:id="@+id/edit_self_intro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/Introduction"
                android:inputType="textShortMessage"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_border"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:contentDescription="@string/placeholder"
                android:padding="13dp"
                app:srcCompat="@drawable/phone_icon" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:targetApi="o" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:onClick="confirm_button"
        android:text="@string/confirm"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />


</android.support.constraint.ConstraintLayout>