...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp">

                <TextView
                    android:id="@+id/utitle"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:textColor="@color/design_default_color_primary"
...
