...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="0dp">
                <TextView
                    android:id="@+id/reviewer_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:textColor="@color/colorPrimaryDark"
...
